# pokemon_bayesian_analysis

./: analysis.md  main.py  pyproject.toml
project/: model.ipynb  pokemon.ipynb  pokemon_summary.ipynb
project/data/: 6-Pokemon_gen2.csv  Pokemon.csv
