[project]
name = "pokemon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bambi>=0.15.0",
    "jax>=0.7.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "plotly>=6.3.0",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "scikit-bio>=0.7.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]
